# UserLink-MCP-Server

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  pyproject.toml
src/: __init__.py  config.py  server.py
src/middlewares/: __init__.py  headers.py
src/models/: __init__.py  base.py  constants.py
src/models/confluence/: __init__.py  common.py  page.py
src/models/jira/: __init__.py  common.py  issue.py  search.py
src/providers/: __init__.py
src/providers/atlassian/: __init__.py  base.py  confluence.py  exceptions.py  jira.py
src/providers/atlassian/preprocessing/: __init__.py  confluence.py
src/providers/atlassian/utils/: __init__.py  constants.py  cql_utils.py  jira_constants.py
src/providers/microsoft/: __init__.py  base.py  outlook.py  teams.py
src/utils/: __init__.py  auth.py
