[project]
name = "userlink-mcp-server"
version = "0.1.0"
description = "Universal Bridge for Your Work Data - MCP Server for aggregating data from major SaaS platforms"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "UserLink Contributors" }
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
