[project]
name = "userlink-mcp-server"
version = "0.1.0"
description = "Universal Bridge for Your Work Data - MCP Server for aggregating data from major SaaS platforms"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "UserLink Contributors" }
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "atlassian-python-api>=4.0.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.11.6",
    "markdown>=3.7.0",
    "pydantic>=2.10.6",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
